--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "uuid": "^9.0.1"
   }
 }
