--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "mongoose": "^7.3.0",
