--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bankinapi",
+  "name": "searchsicopapi",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -15,9 +15,18 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "helmet": "^6.0.1",
     "mongoose": "^7.3.0",
     "uuid": "^9.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/KleyDos/SearchSicopApi.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KleyDos/SearchSicopApi/issues"
+  },
+  "homepage": "https://github.com/KleyDos/SearchSicopApi#readme"
 }
